--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
   <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #ccccd075;">
     <a class="navbar-brand" href="#">
       <img src="logo1.png" alt="logo" width="150px"><h2>COMPUTER SCIENCE DEPARTMENT</h2>
@@ -30,6 +31,7 @@
       </ul>
     </div>
   </nav>
+    </div>
           <br>
           <br>
           <div class="col-12 col-sm-12 col-md-12 col-lg-12">
